# ChangeLog for dev-php/PEAR-HTML_Template_Flexy
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Flexy/ChangeLog,v 1.38 2007/08/18 19:16:50 hoffie Exp $

*PEAR-HTML_Template_Flexy-1.2.5 (18 Aug 2007)

  18 Aug 2007; Christian Hoffmann <hoffie@gentoo.org>
  +PEAR-HTML_Template_Flexy-1.2.5.ebuild:
  version bump wrt bug 158633, thanks to Jakub Moc

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  25 May 2006; Luca Longinotti <chtekk@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.4.ebuild:
  Readd HPPA, PPC64 and SPARC keywords.

  25 May 2006; Luca Longinotti <chtekk@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.4.ebuild:
  Readd dropped PPC keyword.

  21 May 2006; Luca Longinotti <chtekk@gentoo.org>
  -PEAR-HTML_Template_Flexy-0.6.3.ebuild,
  -PEAR-HTML_Template_Flexy-1.2.1.ebuild:
  Remove old-style PHP packages.

  18 Mar 2006; Jeroen Roovers <jer@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Stable on hppa (bug #119722).

*PEAR-HTML_Template_Flexy-1.2.4 (28 Feb 2006)

  28 Feb 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +PEAR-HTML_Template_Flexy-1.2.4.ebuild:
  Version bump.

  17 Feb 2006; Aron Griffis <agriffis@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Mark 1.2.3 stable on alpha/ia64. #119722

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Stable on ppc.

  23 Jan 2006; Bryan Østergaard <kloeri@gentoo.org
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Add ~ia64 keyword, bug 119722.

  22 Jan 2006; Simon Stelling <blubb@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  stable on amd64 wrt bug 119722

  22 Jan 2006; Jason Wever <weeve@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Stable on SPARC wrt bug #119722.

  22 Jan 2006; Mark Loeser <halcy0n@gentoo.org>
  PEAR-HTML_Template_Flexy-1.2.3.ebuild:
  Stable on x86; bug #119722
