@@ -1,22 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST HTML_Template_Flexy-1.2.3.tgz 118268 RMD160 ad8be4521e8648cef0127c3448ed270cc168996e SHA1 2f0eca7790876f76c8c03eacb2214ff1cef3593f SHA256 e02b3c4cea7e2ac29ce8f8030de424de0a68d0ab90d3d8ca8de5dfb8b218b4b7
-DIST HTML_Template_Flexy-1.2.4.tgz 120381 RMD160 c9b403ecdb9a2dd9e9879f61ee8e1c258e6b021e SHA1 8acaf96c9a4c367d81f3e22cae303069b4087d8c SHA256 812fa6d0d700f8deca0aa3ee462e71897ab77eb6cb4ce832f1d5af5b1fe7de9f
 DIST HTML_Template_Flexy-1.2.5.tgz 122089 RMD160 b77c44d757f091bb020cbe4a622d89dcec09109f SHA1 4eee84c439bba82899144d63037d079c8acaac82 SHA256 179fb8265a0b471b1f15294dbdb51fce15c5216584b184bef4b8163c2c4f9469
 EBUILD PEAR-HTML_Template_Flexy-1.2.3.ebuild 475 RMD160 b0109971938e46506452b5010810216f0b73b812 SHA1 e7bac07a311dae1a3c70988ca47c9ad6cc08f6e3 SHA256 bca1cc2900641e36ca9f6cd3297f316a9676f39c698dbdad2273eeb3667825d7
 MD5 e55d95a74552022b1c3df4bc7827f194 PEAR-HTML_Template_Flexy-1.2.3.ebuild 475
 RMD160 b0109971938e46506452b5010810216f0b73b812 PEAR-HTML_Template_Flexy-1.2.3.ebuild 475
 SHA256 bca1cc2900641e36ca9f6cd3297f316a9676f39c698dbdad2273eeb3667825d7 PEAR-HTML_Template_Flexy-1.2.3.ebuild 475
-EBUILD PEAR-HTML_Template_Flexy-1.2.4.ebuild 519 RMD160 e59286d69417b5a52ffc84d44be854ea13411b91 SHA1 e7f34e747d7a623f5123e16c5c97dcad14b570a5 SHA256 6339552c9c5347f9cfac15933f9217f3385a74ea2470f5ce9f5b324e8556d4a9
-MD5 536f289db9796b27675f9a5d8f6dcad0 PEAR-HTML_Template_Flexy-1.2.4.ebuild 519
-RMD160 e59286d69417b5a52ffc84d44be854ea13411b91 PEAR-HTML_Template_Flexy-1.2.4.ebuild 519
-SHA256 6339552c9c5347f9cfac15933f9217f3385a74ea2470f5ce9f5b324e8556d4a9 PEAR-HTML_Template_Flexy-1.2.4.ebuild 519
 EBUILD PEAR-HTML_Template_Flexy-1.2.5.ebuild 544 RMD160 5ff3f63172d91e8b688071d300f4c921bac50dde SHA1 4f087a233a77b17d0e2738aedd2e741bacbd6135 SHA256 585744e031264bea46c5effee53c1d08f45578c98abdc5a31d4e817cba06b139
 MD5 6abf6e4712098befb657ecde103392ea PEAR-HTML_Template_Flexy-1.2.5.ebuild 544
 RMD160 5ff3f63172d91e8b688071d300f4c921bac50dde PEAR-HTML_Template_Flexy-1.2.5.ebuild 544
 SHA256 585744e031264bea46c5effee53c1d08f45578c98abdc5a31d4e817cba06b139 PEAR-HTML_Template_Flexy-1.2.5.ebuild 544
-MISC ChangeLog 5321 RMD160 ed1ba44cfc3d3b0a64d4e7160e23b963f5d1e6df SHA1 bcd10a569cb4b21d59c0552002b92ef1fc97826e SHA256 33430325a2b7d850419c40fc1b2afb0154d3c887df3a726a9324c4d416d35a50
-MD5 7889780beabab237f5a3f75b76ec9e5c ChangeLog 5321
-RMD160 ed1ba44cfc3d3b0a64d4e7160e23b963f5d1e6df ChangeLog 5321
-SHA256 33430325a2b7d850419c40fc1b2afb0154d3c887df3a726a9324c4d416d35a50 ChangeLog 5321
+MISC ChangeLog 5422 RMD160 b91bbf890775fc09703dfa5ac7ebee4342b8911f SHA1 abe82c1da9cb62f0bfaebfbc6e7e15ee111db41c SHA256 4f261166eeeed8f7b864c787ae54007f258239f35d055fbf8dd913201675c6ea
+MD5 8cd668896c19a3976df3ac557837cfaa ChangeLog 5422
+RMD160 b91bbf890775fc09703dfa5ac7ebee4342b8911f ChangeLog 5422
+SHA256 4f261166eeeed8f7b864c787ae54007f258239f35d055fbf8dd913201675c6ea ChangeLog 5422
 MISC metadata.xml 156 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 SHA1 1f452f476317b4634c684eabfd8840d06d35b414 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
 RMD160 a3a59cdc3ac33d711123b2d7e2b1deb2984aa101 metadata.xml 156
@@ -24,9 +22,13 @@ SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba metadata
 MD5 6de96f9d53d03a33f3ab87bd2057b933 files/digest-PEAR-HTML_Template_Flexy-1.2.3 268
 RMD160 532fbab04f01229cb4a332b26fd12a931251c0ba files/digest-PEAR-HTML_Template_Flexy-1.2.3 268
 SHA256 01f2f6d3a51c2092547cb8340d4b9fd7eb9db2c162a2b946295d6e939a162de6 files/digest-PEAR-HTML_Template_Flexy-1.2.3 268
-MD5 0ae5cc02a1135ff7528d688929f0e858 files/digest-PEAR-HTML_Template_Flexy-1.2.4 268
-RMD160 c8cefd7cd14e79036f01c44f097a59897bdcbcd7 files/digest-PEAR-HTML_Template_Flexy-1.2.4 268
-SHA256 99325d6772237f4b97c168c8f6858f0b8343bb63c85b240654a7c68eeee11c5e files/digest-PEAR-HTML_Template_Flexy-1.2.4 268
 MD5 d7ddcfe17ea6f755bada7d8305398f7d files/digest-PEAR-HTML_Template_Flexy-1.2.5 268
 RMD160 f3666068f7be5558bbee02b986d8056fd32b96a2 files/digest-PEAR-HTML_Template_Flexy-1.2.5 268
 SHA256 0961a29c676d80966168e721bfc3731be01a25a7c100fd2adfb305943d6a324a files/digest-PEAR-HTML_Template_Flexy-1.2.5 268
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.6 (GNU/Linux)
+
+iD8DBQFG4B0/z974XjDVpbkRAkvHAKDC91U5S9bJIl91tWRqSwt9RLDagACffuTX
+LJHUcrOPSeSg2D3KpEDwfD4=
+=VSwK
+-----END PGP SIGNATURE-----
