@@ -1,3 +1,0 @@
-MD5 093e8a45095db78a9fc36f4ff1ed64d7 HTML_Template_Flexy-1.2.4.tgz 120381
-RMD160 c9b403ecdb9a2dd9e9879f61ee8e1c258e6b021e HTML_Template_Flexy-1.2.4.tgz 120381
-SHA256 812fa6d0d700f8deca0aa3ee462e71897ab77eb6cb4ce832f1d5af5b1fe7de9f HTML_Template_Flexy-1.2.4.tgz 120381
