@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-HTML_Template_Flexy
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Flexy/ChangeLog,v 1.38 2007/08/18 19:16:50 hoffie Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_Template_Flexy/ChangeLog,v 1.39 2007/09/06 15:31:03 jokey Exp $
+
+  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
+  -PEAR-HTML_Template_Flexy-1.2.4.ebuild:
+  Cleanup
 
 *PEAR-HTML_Template_Flexy-1.2.5 (18 Aug 2007)
 
